--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = citi\n",
+    "city_count = cities\n",
     "city_count # 12"
    ]
   },
